--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 	<center><h1>Rate My Course</h1></center>
-	<form action="ratemycourseadd">
+	<form>
 	<center>
 		<b>Department</b>
 		<select id="dropMenu" class="dropdown-content">
@@ -51,9 +51,11 @@
 		<!-- <a href = "ratemycourseadd">
 			<button id="submitSearch" onclick = "ratemycourseadd">Submit</button>
 		</a> -->
-		<input type="submit" value="Submit" />
+		<input type="button" onclick="location.href='ratemycourseratings';" value="Submit" />
 
 	</center>
+
+	<center><input type="button" onclick="location.href='ratemycourseadd';" value="Add a Course" /></center>
 	<!--<input type="submit" style="display: none" />-->
 	
 	</form><br>
