--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -9,11 +9,12 @@
 			bottom: 0;
 		} */
    </style>
+   <script src="/static/script.js"></script>
 {% endblock %}
 
 {% block content %}
 	<center><h1>Rate My Course</h1></center>
-	<form>
+	<form action="ratemycourseadd">
 	<center>
 		<b>Department</b>
 		<select id="dropMenu" class="dropdown-content">
