--- a/templates/ratemycourseadd.html
+++ b/templates/ratemycourseadd.html
@@ -3,6 +3,7 @@
 {% block head %}
 	<title>Add Course</title>
 	<!-- <link rel="stylesheet" href="../static/styles.css"> -->
+	<script src="/static/script.js"></script> 
 {% endblock %}
 {% block content %}
 	<h3>Add Course</h3>
