--- a/templates/ratemycourseratings.html
+++ b/templates/ratemycourseratings.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 	<title>{{ courseID }}</title>
+    <script src="/static/script.js"></script>
     <!-- bar stuff is from w3schools.com/howto/tryit.asp?filename=tryhow_css_user_rating-->
     <style>
         .table {
