--- a/templates/ratemycourseadd.html
+++ b/templates/ratemycourseadd.html
@@ -8,7 +8,8 @@
 {% block content %}
 	<h3>Add Course</h3>
 	<form method="POST">
-		<p>Course ID <input type="text" id="courseid" style="width: 300px;" placeholder="Enter course ID (e.g. CSC212)"></p>
+		<p>Course Abbreviation <input type="text" id="courseid" style="width: 200px;" placeholder="Enter course ID (e.g. CSC212)"></p>
+		<p>Course Name <input type="text" id="coursename" style="width: 350px;" placeholder="Enter course name (e.g. Human Computer Interaction)"></p>
 		<p>Department
 		<select id="dropMenu" class="dropdown-content">
 			<option value="Accounting">Accounting</option>
