changed to 1 form

--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
+	<!--Emersyn, Rachael, Sarah, Kelly, Grant-->
    <title>RateMyCourse</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../static/styles.css">
