--- a/templates/ratemycourseratings.html
+++ b/templates/ratemycourseratings.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
+    <!--Emersyn, Rachael, Sarah, Kelly, Grant-->
 	<title>{{ courseID }}</title>
     <script src="/static/script.js"></script>
     <!-- bar stuff is from w3schools.com/howto/tryit.asp?filename=tryhow_css_user_rating-->
