--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -1,6 +1,7 @@
 ﻿{% extends "layout.html" %}
 
 {% block head %}
+    <!--Emersyn, Rachael, Sarah, Kelly, Grant-->
     <meta charset="utf-8" />
     <title>Course Feedback Form</title>
     <style type="text/css">
@@ -22,7 +23,40 @@
     <h3>Feedback Form</h3>
     <br />
     <form method="POST" action="ratemycourseratings/{{ courseID }}">
-        <p>Course ID <input type="text" id="courseid" style="width: 300px;" placeholder="{{ courseID }}"></p><br>
+        <p>Course Abbreviation <input type="text" id="courseid" name="courseid" style="width: 200px;" placeholder="Enter course ID (e.g. CSC212)"></p>
+        <p>Course Name <input type="text" id="coursename" name="coursename" style="width: 350px;" placeholder="Enter course name (e.g. Human Computer Interaction)"></p>
+        <p>Department
+        <select id="dropMenu" class="dropdown-content">
+            <option value="Accounting">Accounting</option>
+            <option value="Anthropology">Anthropology</option>
+            <option value="Art History">Art History</option>
+            <option value="Biology">Biology</option>
+            <option value="Brain & Cognitive Sciences">Brain & Cognitive Sciences</option>
+            <option value="Business">Business</option>
+            <option value="Chemical Engineering">Chemical Engineering</option>
+            <option value="Chemistry">Chemistry</option>
+            <option value="Computer Science">Computer Science</option>
+            <option value="Economics">Economics</option>
+            <option value="Education">Education</option>
+            <option value="English">English</option>
+            <option value="Finance">Finance</option>
+            <option value="Studio Arts">Studio Arts</option>
+            <option value="Geography">Geography</option>
+            <option value="Geology">Geology</option>
+            <option value="History">History</option>
+            <option value="Linguistics">Linguistics</option>
+            <option value="Marketing">Marketing</option>
+            <option value="Mathematics">Mathematics</option>
+            <option value="Music">Music</option>
+            <option value="Nursing">Nursing</option>
+            <option value="Philosophy">Philosophy</option>
+            <option value="Physics">Physics</option>
+            <option value="Political Science">Political Science</option>
+            <option value="Psychology">Psychology</option>
+            <option value="Theater">Theater</option>
+            <option value="Women's Studies">Women's Studies</option>
+            <option value="Writing">Writing</option>
+        </select></p>
         <p>Professor <input id="prof" type="text" placeholder="Enter professor name"></p><br>
         <p>Semester Taken <input id="sem" style="width: 300px;" type="text" placeholder="Enter semester you took the class (e.g. Fall 2022)"></p><br>
         <div id="overall">
@@ -155,7 +189,7 @@
         <br>
         <p>Write a Review</p>
         <textarea cols="50" rows="10" name="review" placeholder="What do you want other students to know about this course?  Avoid profanity or derogatory terms."></textarea>
-        <input type="submit" style="display: none" /><br>
+        <input type="submit" style="display: none" />
         <input type="button" id="submitReview" onclick="location.href='ratemycourseratings/{{ courseID }}';" value="Submit"/> <!--Redirect back to course page-->
     </form>
 </body>
