--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -188,7 +188,7 @@
             <p><input type="checkbox" name="tag" value="Graded By Few Things">Graded By Few Things</p>
         <br>
         <p>Write a Review</p>
-        <textarea cols="50" rows="10" name="review" placeholder="What do you want other students to know about this course?  Avoid profanity or derogatory terms."></textarea>
+        <textarea cols="50" rows="10" name="review" placeholder="What do you want other students to know about this course?  Avoid profanity or derogatory terms."></textarea><br>
         <input type="submit" style="display: none" />
         <input type="button" id="submitReview" onclick="location.href='ratemycourseratings/{{ courseID }}';" value="Submit"/> <!--Redirect back to course page-->
     </form>
