--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -57,7 +57,7 @@
             <option value="Women's Studies">Women's Studies</option>
             <option value="Writing">Writing</option>
         </select></p>
-        <p>Professor <input id="prof" type="text" placeholder="Enter professor name"></p><br>
+        <!--<p>Professor <input id="prof" type="text" placeholder="Enter professor name"></p><br>
         <p>Semester Taken <input id="sem" style="width: 300px;" type="text" placeholder="Enter semester you took the class (e.g. Fall 2022)"></p><br>
         <div id="overall">
             <div class="selectgroup">
@@ -188,7 +188,7 @@
             <p><input type="checkbox" name="tag" value="Graded By Few Things">Graded By Few Things</p>
         <br>
         <p>Write a Review</p>
-        <textarea cols="50" rows="10" name="review" placeholder="What do you want other students to know about this course?  Avoid profanity or derogatory terms."></textarea><br>
+        <textarea cols="50" rows="10" name="review" placeholder="What do you want other students to know about this course?  Avoid profanity or derogatory terms."></textarea><br>-->
         <input type="submit" style="display: none" />
         <input type="button" id="submitReview" onclick="location.href='ratemycourseratings/{{ courseID }}';" value="Submit"/> <!--Redirect back to course page-->
     </form>
