--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -1,86 +1,94 @@
 {% extends "layout.html" %}
 
 {% block head %}
-    <title>Down Detector</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/styles.css">
-    <style>
-        div.one {
-            text-align: center;
-            font-size: 30px;
-            color: black;
-            padding: 10px;
-            float: left;
-            align-items: center;
-            justify-content: center;
-            height: 900px;
-            width: 45%;
-            margin: 0 auto; 
-        }
-        div.two {
-            text-align: center;
-            font-size: 30px;
-            color: black;
-            padding: 10px;
-            align-items: center;
-            justify-content: center;
-            width: 45%;
-            margin: 0 auto; 
-        }
-    </style>
+<title>Down Detector</title>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="../static/styles.css">
+<style>
+    div.one {
+        text-align: center;
+        font-size: 30px;
+        color: black;
+        padding: 10px;
+        float: left;
+        align-items: center;
+        justify-content: center;
+        height: 900px;
+        width: 45%;
+        margin: 0 auto;
+    }
+
+    div.two {
+        text-align: center;
+        font-size: 30px;
+        color: black;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+        width: 45%;
+        margin: 0 auto;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
+<div style="display: flex;">
+<div class="one" style="flex: 1;">
+    <h3>{{ name }}</h3>
+    </br>
+    <h3>Recent Reports: {{ reportcount }}</h3>
+    </br>
+    <form method="post">
+        {{ form.csrf_token }}
+        <input type="radio" id="down" name="status" value="true">
+        <label for="down">This Elevator is Down</label>
+        </br>
+        <input type="radio" id="up" name="status" value="false">
+        <label for="up">The Elevator is Working</label>
+        <input type="submit" value="Submit">
+    </form>
+    </br>
+</div>
+<div class="two" id="two" style="flex: 1;">
 
-    <div class="one">
-        <h3>{{ name }}</h3>
-        </br>
-        <h3>Recent Reports: {{ reportcount }}</h3>
-        </br>
-        <form method="post">
-            {{ form.csrf_token }}
-            <input type="radio" id="down" name="status" value="true">
-            <label for="down">This Elevator is Down</label>
-        </br>
-            <input type="radio" id="up" name="status" value="false">
-            <label for="up">The Elevator is Working</label>
-            <input type="submit" value="Submit">
-        </form>
-        </br>
-    </div>
-    <div class="two">
-    </br>
-    </br>
-    </br>
-    </br>
     <h3>24h Outage Records</h3>
-        <canvas id="barChart" width="450" height="200"></canvas>
-        <script>
-            //IGNORE RED UNDERLINES, jinja will populate data before the js script runs
-            const ctx = document.getElementById('barChart');
+    <canvas id="barChart"></canvas>
+</div>
+</div>
+<script>
+    // Get the canvas element
+    var canvas = document.getElementById("barChart");
 
-            new Chart(ctx, {
-                type: 'bar',
-                options: {
-                    scales: { 
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                },
-                data: {
-                    labels: {{ labels | safe }},
-                datasets: [{
-                    label: '# of Reports',
-                    data: {{ values | safe}},
-                borderWidth: 1
-                }]
-            },
-        });
-        </script>
-    </div>
+    // Get the div that contains the canvas
+    var container = document.getElementById("two");
+
+    // Set the width and height of the canvas to the width and height of the div
+    canvas.width = container.offsetWidth;
+    canvas.height = container.offsetHeight;
+    //IGNORE RED UNDERLINES, jinja will populate data before the js script runs
+    const ctx = document.getElementById('barChart');
+
+    new Chart(ctx, {
+        type: 'bar',
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        },
+        data: {
+            labels: {{ labels | safe }},
+        datasets: [{
+            label: '# of Reports',
+            data: {{ values | safe}},
+        borderWidth: 1
+            }]
+        },
+    });
+</script>
 
 {% endblock %}
