down detector refresh html fix for nav bar format

--- a/templates/downdetectorrefresh.html
+++ b/templates/downdetectorrefresh.html
@@ -6,7 +6,15 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/styles.css">
-
+<style>
+    h5 {
+        font-family: "Trebuchet MS";
+        font-size: 20px;
+        font-weight: bold;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
