--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <body>
         <div class="header">
           <header>
-           <a href="urwebhub.html"><h1>UR Web Hub</h1></a>
+           <a href="/"><h1>UR Web Hub</h1></a>
            <div class="intro">Campus Resources</div>
          </header>
    </div>
