--- a/static/styles.css
+++ b/static/styles.css
@@ -45,7 +45,7 @@ li {
 }
 
 label {
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	color: #ADD8E6;
 	/* font-weight: bold; */
 	font-size: 2em;
@@ -158,7 +158,7 @@ fieldset {
 .short-text { 
 	display: none; 
 	color: #ffdb4d;
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 }
 
 @media (max-width: 650px) {
@@ -191,14 +191,14 @@ header, footer, nav, .lead, .full-width, #current_date {
 } 
 
 h1 {
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	text-align: center;
 }
 
 .intro {
 	font-weight: bold;
 	font-size: 20px;
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	text-align: center;
 	color: #ADD8E6;
 }
@@ -206,7 +206,7 @@ h1 {
 h2 {
 	font-weight: bold;
 	margin-bottom: 2em;
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	background-repeat: no-repeat;
 	text-align: center;
 	color: #003366;
@@ -224,7 +224,7 @@ h2 {
 h3 {
 	margin: 40px;
 	line-height: 1.5em;
-	font-family: "Century Gothic";
+	font-family: "Century Gothic","Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	text-align: center;
 	font-size: 30px;
 	color: #003366;
@@ -239,7 +239,7 @@ p {
 }
 
 ul {
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	font-size: 20px;
 	text-align: center;
 	padding-top: 2em;
@@ -308,7 +308,7 @@ footer {
 footer h4 {
 	padding-top: 25px;
 	padding-bottom: 25px;
-	font-family: "Century Gothic";
+	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	font-size: 25px;
 	padding-left: 1.5em;
 	padding-right: 1.5em;
