--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -17,7 +17,7 @@
 
         .form_center{
             display: flex;
-            margin 0 auto;
+            margin: 0 auto;
         }
 
        
