added more functionality

--- a/templates/ratemycourseratings.html
+++ b/templates/ratemycourseratings.html
@@ -78,7 +78,7 @@
     {%endfor%}
 
     <p>Top Reviews</p>
-    Loop through reviews-->
+    <!--Loop through reviews-->
     <!--{%for review in reviews%}
         <div class="comment">{{ reviews.rating }} {{ reviews.message }} {{ reviews.tips }}</div><br>
 
