--- a/templates/downdetectornav.html
+++ b/templates/downdetectornav.html
@@ -92,6 +92,6 @@
 
     </map>
     </br>
-    <h1>Having trouble finding a building? Click <a href="/buildinglist">here</a> to see the list of buildings!</h1>
+    <h1>Having trouble finding a building? Click <a class="building" href="/buildinglist">here</a> to see the list of buildings!</h1>
 
 {% endblock %}
