--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -2,8 +2,8 @@
 
 {% block head %}
     <!--Emersyn, Rachael, Sarah, Kelly, Grant-->
-    <meta charset="utf-8" />
     <title>Course Feedback Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../static/styles.css">
     <style type="text/css">
         
