--- a/templates/ratemycourseratings.html
+++ b/templates/ratemycourseratings.html
@@ -3,6 +3,7 @@
 {% block head %}
     <!--Emersyn, Rachael, Sarah, Kelly, Grant-->
 	<title>{{ courseID }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="/static/script.js"></script>
     <!-- bar stuff is from w3schools.com/howto/tryit.asp?filename=tryhow_css_user_rating-->
     <style>
