--- a/static/styles.css
+++ b/static/styles.css
@@ -457,3 +457,12 @@ a.building {
 a.building:hover { 
     color: #f30567; 
 }
+
+.back {
+	background-color: #999999;
+	padding: 2em;
+	border-radius: 15px 15px 15px 15px;
+	margin: 0 auto;
+	margin-top: 2em;
+	max-width: 90%;
+}
