checking for which schedule

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -11,6 +11,7 @@
 {% block content %}
          <div class="container">
                <div id="current_date"></div>
+               <div id="fall_schedule"></div>
             <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
          <div class="zoom">
