testing css fixes

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -10,8 +10,10 @@
 
 {% block content %}
          <div class="container">
+            <div class = "whatisopen">
                <div id="current_date"></div>
                <div id="fall_schedule"></div>
+            </div>
             <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
          <div class="zoom">
