--- a/templates/ratemycourseratings.html
+++ b/templates/ratemycourseratings.html
@@ -7,6 +7,10 @@
     <script src="/static/script.js"></script>
     <!-- bar stuff is from w3schools.com/howto/tryit.asp?filename=tryhow_css_user_rating-->
     <style>
+
+        header{
+            width:auto;
+        }
         .table {
             border-collapse: collapse;
         }
