--- a/templates/dining.html
+++ b/templates/dining.html
@@ -9,11 +9,18 @@
 {% endblock %}
 
 {% block content %}
-         <div class="container">
-            <div class = "whatisopen">
-               <div id="current_date"></div>
-               <div id="fall_schedule"></div>
-            </div>
+      <div class="container">
+         <div class = "whatisopen">
+            <div id="current_date"></div>
+            <div id="fall_schedule"></div>
+            <div id="pit_schedule"></div>
+            <div id="starbucks_schedule"></div>
+            <div id="connections_schedule"></div>
+            <div id="hillside_schedule"></div>
+            <div id="douglassbreak_schedule"></div>
+            <div id="douglassbrunch_schedule"></div>
+            <div id="douglassdinner_schedule"></div>
+         </div>
             <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
          <div class="zoom">
